syntax = "proto3";

option go_package = "github.com/handysuherman/clean-arch-payment-service/internal/pb";
import "google/protobuf/timestamp.proto";

message PaymentMethod {
    string uid = 1;
    string payment_method_id = 2;
    optional string payment_request_id = 3;
    string payment_reference_id = 4;
    string payment_business_id = 5;
    string payment_customer_id = 6;
    string payment_type = 7;
    string payment_status = 8;
    string payment_reusability = 9;
    string payment_channel = 10;
    double payment_amount = 11;
    optional string payment_qr_code = 12;
    optional string payment_virtual_account_number = 13;
    optional string payment_url = 14;
    string payment_description = 15;
    google.protobuf.Timestamp created_at = 16;
    optional google.protobuf.Timestamp updated_at = 17;
    optional google.protobuf.Timestamp expires_at = 18;
    optional google.protobuf.Timestamp paid_at = 19;
}